# la-info-pack

./: .env  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  setup.cfg
data/lsoa11/: lsoa_age.csv  lsoa_dwellings_hh_spacescsv.csv  lsoa_ethnic_group.csv  lsoa_main_language.csv  lsoa_usual_resident_pop.csv
docs/: conf.py
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  writing_sphinx_documentation.md
docs/user_guide/: README.md
src/la_info_pack/: run_pipeline.py
tests/: test_example_module.py
