[metadata]
name = la_info_pack
description = a brief description
version = 0.0.1
author = ONS
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    la_info_pack
install_requires =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    detect-secrets
    python-dotenv
    Sphinx
    toml
python_requires = >=3.6
package_dir =
    =./src
zip_safe = no
